# VibeHarness

./: .gitignore  BUG_mythos_garbled_toolcalls_01_analysis.md  BUG_mythos_garbled_toolcalls_02_fix.md  BUG_mythos_garbled_toolcalls_03_integration_test.md  BUG_vibe_log_missing.md  CLAUDE.md  DAEMON_CRASH_RESUME_ANALYSIS.md  KIRA_ANALYSIS.md  LOOP_ORCHESTRATION.md  MYTHOS_DIVERGENCE.md  MYTHOS_FAST_ANALYSIS.md  Modelfile  OLLAMA_MULTIPLE_ANALYSIS.md  PROSE_LABELING_ANALYSIS.md  QWEN3CODER_ANALYSIS.md  QWEN3CODER_DIVERGENCE.md  QWEN3CODER_VALIDATION_LOG.md  README.md  SNAPSHOT_SCOPING_ANALYSIS.md  SNAPSHOT_TO_NL_ANALYSIS.md  TOOLCALL_FORMATS_RESEARCH.md  alum_research.md  analyze_job_log.py  code_bloat_summary.txt  gen_job_tasks.py  implementation_synthesis.md  improvements_recommendations_analysis.md  issue_analysis_tool_call.md  issue_chat_context.md  loop_state.json  metrics_large_scale_iter1.json  multi_job_state.json  opencode.json  pyproject.toml  qwen3_analysis_brief_update.md  qwen3_upgrade_analysis.md  qwen_tool_call_analysis_report.md  run.py  run_iter5_escalation_test.ps1  run_iter6.ps1  (+16 more)
.github/: CODEOWNERS
.opencode/: README.md  vibeharness.json
benchmarks/: __init__.py  runner.py  tasks.py
samples/: youtube_consent_prose.txt
scripts/: OPS_HEALTH_CHECK.md  build_release.ps1  leak_check.ps1  snapshot_prune_prototype.py
system_prompts/: qwen3-4b_web_system_prompt_20260626-193051.txt
test_assets/: README.md  application_instruction.md  generate_docx.py  jason_statham.json  jason_statham_cover_letter.docx  jason_statham_resume.docx  score.py  score_evaluation.json
tests/: _fakes.py  conftest.py  test_advisor_messages.py  test_agent.py  test_api_llm.py  test_api_stateful_history.py  test_benchmark.py  test_chat_template_compliance.py  (+51 more)
(+52 files in other folders)
