[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "vibeharness"
version = "0.1.0"
description = "A tiny Ralph-loop agent harness for small local models (VibeThinker-3B via Ollama)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nickalas Light" }]
keywords = ["llm", "agent", "ollama", "vibethinker", "ralph-loop", "local-ai", "tool-use"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []  # standard library only

[project.optional-dependencies]
dev = ["pytest>=7", "jinja2>=3"]
api = ["openai>=1.0.0"]

[project.urls]
Homepage = "https://github.com/NickalasLight/VibeHarness"
Repository = "https://github.com/NickalasLight/VibeHarness"

[project.scripts]
vibe = "vibeharness.cli:main"

[tool.setuptools]
packages = ["vibeharness"]

[tool.pytest.ini_options]
# Markers are registered so `pytest` emits no unknown-marker warnings. The
# DEFAULT test selection is intentionally NOT filtered here (no addopts = -m ...):
# the fast unit lane stays exactly what it was. Opt into the real-environment
# suite explicitly, e.g. `pytest -m needs_ollama` or `pytest -m slow`.
markers = [
    "needs_ollama: requires a live Ollama server",
    "needs_web: requires playwright-cli + the demo web app at localhost:3000",
    "slow: slow / real-model test (not part of the fast unit lane)",
    "integration: network/HuggingFace-dependent test (skipped when offline or HF_TOKEN absent)",
]
